# clone-web-scrapper

./: README.md  file.py  main.py  pyproject.toml  python.csv
extractors/: indeed.py  remoteok.py  wwr.py
templates/: home.html  search.html
